Add an IT profile based on Sling-9